exports[`Header renders \`Review Your Schedule\` if schedule to recover 1`] = `
<h4
  className="text-center">
  Transfer Your Schedule
</h4>
`;

exports[`Header renders \`Transfer Your Schedule\` by default 1`] = `
<h4
  className="text-center">
  Review Your Schedule
</h4>
`;

exports[`Header renders override if override 1`] = `
<span>
  hey
</span>
`;

exports[`ScheduleLayout renders with props 1`] = `
<div>
  <div
    className="push-double@lap-and-up push">
    <span>
      header
    </span>
  </div>
  <div
    className="soft">
    <div
      className="display-inline-block one-whole">
      <h5
        className="text-dark-secondary text-left">
        Starting on 
        2016-11-18T00:26:48+00:00 formatted as MMM D, YYYY
        , I will give 
        <span
          className="text-primary">
           
          $12
           
        </span>
        to 
        123
        . This will occur 
        now
        .
      </h5>
    </div>
    <div
      className="display-inline-block one-whole">
      <h5
        className="text-dark-secondary text-left">
        Starting on 
        2016-11-18T00:26:48+00:00 formatted as MMM D, YYYY
        , I will give 
        <span
          className="text-primary">
           
          $12
           
        </span>
        to 
        234
        . This will occur 
        later
        .
      </h5>
    </div>
    <button
      className="btn one-whole push-top soft-sides"
      type="submit">
      <span>
        Schedule Now using 6789
      </span>
       
      <div
        className="background--fill display-inline-block kpeakM"
        height="21px"
        width="30px" />
    </button>
    <div
      className="display-block soft-top text-left">
      <h6
        className="outlined--light outlined--bottom display-inline-block text-dark-tertiary"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }>
        Change Payment Accounts
      </h6>
      <br />
      <h6
        className="outlined--light outlined--bottom display-inline-block text-dark-tertiary"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }>
        Enter New Payment
      </h6>
    </div>
  </div>
</div>
`;
